[gd_scene load_steps=9 format=3 uid="uid://bmd3jo3passp5"]

[ext_resource type="Script" uid="uid://duvrx53y1otkh" path="res://game/ui/player_menu/quest/quest_panel.gd" id="1"]
[ext_resource type="Theme" uid="uid://c7u2g7u3nqj0w" path="res://game/ui/theme/ui_theme.tres" id="2"]
[ext_resource type="Script" uid="uid://0n0cdf7uip65" path="res://game/globals/quest/models/quest_resource.gd" id="3_xhs3p"]
[ext_resource type="Resource" uid="uid://dxij07snm0v6i" path="res://game/data/quests/unlock_axe.tres" id="4_3g2jl"]
[ext_resource type="Resource" uid="uid://bidvxfyy0a154" path="res://game/data/quests/meet_frieren.tres" id="4_p10y1"]
[ext_resource type="LabelSettings" uid="uid://c8m2vxx2x1x5m" path="res://game/ui/theme/label_settings_default.tres" id="5_1xdr2"]
[ext_resource type="LabelSettings" uid="uid://dr461kr0eamd7" path="res://game/ui/theme/label_settings_small.tres" id="6_15iej"]
[ext_resource type="Texture2D" uid="uid://doh17jo5n8gnw" path="res://assets/crops/farm_plants2.png" id="7_p10y1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ikr17"]
atlas = ExtResource("7_p10y1")
region = Rect2(35, 2, 10, 11)

[node name="QuestPanel" type="MarginContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -30.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1")
preview_active_quest_defs = Array[ExtResource("3_xhs3p")]([ExtResource("4_p10y1")])
preview_completed_quest_defs = Array[ExtResource("3_xhs3p")]([ExtResource("4_3g2jl")])

[node name="Content" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Lists" type="VBoxContainer" parent="Content"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2")
theme_override_constants/separation = 6

[node name="ActiveLabel" type="Label" parent="Content/Lists"]
layout_mode = 2
text = "Active"
label_settings = ExtResource("5_1xdr2")

[node name="ActiveList" type="ItemList" parent="Content/Lists"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 4
item_count = 1
item_0/text = "Meet Frieren"

[node name="CompletedLabel" type="Label" parent="Content/Lists"]
layout_mode = 2
text = "Completed"
label_settings = ExtResource("5_1xdr2")

[node name="CompletedList" type="ItemList" parent="Content/Lists"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 4
item_count = 1
item_0/text = "Unlock your mighty axe"

[node name="VSeparator" type="VSeparator" parent="Content"]
layout_mode = 2

[node name="Details" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="QuestTitle" type="Label" parent="Content/Details"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Meet Frieren"
label_settings = ExtResource("5_1xdr2")
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="Content/Details"]
layout_mode = 2

[node name="DetailsScroll" type="ScrollContainer" parent="Content/Details"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="Container" type="BoxContainer" parent="Content/Details/DetailsScroll"]
clip_contents = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="QuestStep" type="Label" parent="Content/Details/DetailsScroll/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Talk to Frieren and check her house out to unlock the watering can!"
label_settings = ExtResource("6_15iej")
autowrap_mode = 3

[node name="ObjectivesTitle" type="Label" parent="Content/Details/DetailsScroll/Container"]
layout_mode = 2
text = "Objectives"
label_settings = ExtResource("5_1xdr2")

[node name="QuestObjectivesList" type="ItemList" parent="Content/Details/DetailsScroll/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 4
auto_width = true
auto_height = true
item_count = 2
item_0/text = "Current step:"
item_0/selectable = false
item_1/text = "Gather 4 Tomato (0/4)"
item_1/icon = SubResource("AtlasTexture_ikr17")
item_1/selectable = false

[node name="RewardsTitle" type="Label" parent="Content/Details/DetailsScroll/Container"]
layout_mode = 2
text = "Rewards"
label_settings = ExtResource("5_1xdr2")

[node name="QuestRewardsList" type="VBoxContainer" parent="Content/Details/DetailsScroll/Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 2
